--- a/DocTaller/Documentacion.tex
+++ b/DocTaller/Documentacion.tex
@@ -16,12 +16,10 @@
 \usepackage{cancel}
 \usepackage{bm}
 \usepackage{amsmath}
-\usepackage{hyperref}
+
 \usepackage{listings}
 \usepackage{color}
-
-\usepackage{minted}
-
+\usepackage{hyperref}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
@@ -76,430 +74,10 @@
 \subsection{FOL}
 \section{FASE 2: IMPLEMENTACIÓN Y PRUEBAS}
 \subsection{DDBB: Código SQL}
-\inputminted[]{sql}{./Script.sql}
+\input{ScriptSql}
 \subsection{Programación: Clases y métodos}
 \subsubsection{Modelos}
-\paragraph{Cliente}
-\begin{lstlisting}
-package Modelos;
-
-public class Cliente {
-	private int id;
-	private String nombre;
-	private String apellido;
-	private String telefono;
-	private String direccion;
-	private String dni;
-	private String correo;
-	
-	public Cliente() {};
-	
-	public Cliente(int id, String nombre, String apellido, String telefono, String direccion, String dni,
-			String correo) {
-		this.id = id;
-		this.nombre = nombre;
-		this.apellido = apellido;
-		this.telefono = telefono;
-		this.direccion = direccion;
-		this.dni = dni;
-		this.correo = correo;
-	}
-	public int getId() {
-		return id;
-	}
-	public void setId(int id) {
-		this.id = id;
-	}
-	public String getNombre() {
-		return nombre;
-	}
-	public void setNombre(String nombre) {
-		this.nombre = nombre;
-	}
-	public String getApellido() {
-		return apellido;
-	}
-	public void setApellido(String apellido) {
-		this.apellido = apellido;
-	}
-	public String getTelefono() {
-		return telefono;
-	}
-	public void setTelefono(String telefono) {
-		this.telefono = telefono;
-	}
-	public String getDireccion() {
-		return direccion;
-	}
-	public void setDireccion(String direccion) {
-		this.direccion = direccion;
-	}
-	public String getDni() {
-		return dni;
-	}
-	public void setDni(String dni) {
-		this.dni = dni;
-	}
-	public String getCorreo() {
-		return correo;
-	}
-	public void setCorreo(String correo) {
-		this.correo = correo;
-	}
-	
-	@Override
-	public String toString() {
-		return nombre+" "+ apellido +"\n"+dni + "\n"+telefono;
-	}
-	
-	
-}
-\end{lstlisting}
-\clearpage
-
-\paragraph{Pieza}
-\begin{lstlisting}
-package Modelos;
-
-public class Pieza {
-	private int id;
-	private String marca;
-	private String modelo;
-	private double precio;
-	private int stock;
-	private String descripcion;
-	private String categoria;
-	
-	
-	public Pieza(int id, String marca, String modelo, double precio, int stock, String descripcion, String categoria) {
-		this.id = id;
-		this.marca = marca;
-		this.modelo = modelo;
-		this.precio = precio;
-		this.stock = stock;
-		this.descripcion = descripcion;
-		this.categoria = categoria;
-	}
-	public int getId() {
-		return id;
-	}
-	public void setId(int id) {
-		this.id = id;
-	}
-	public String getMarca() {
-		return marca;
-	}
-	public void setMarca(String marca) {
-		this.marca = marca;
-	}
-	public String getModelo() {
-		return modelo;
-	}
-	public void setModelo(String modelo) {
-		this.modelo = modelo;
-	}
-	public double getPrecio() {
-		return precio;
-	}
-	public void setPrecio(double precio) {
-		this.precio = precio;
-	}
-	public int getStock() {
-		return stock;
-	}
-	public void setStock(int stock) {
-		this.stock = stock;
-	}
-	public String getDescripcion() {
-		return descripcion;
-	}
-	public void setDescripcion(String descripcion) {
-		this.descripcion = descripcion;
-	}
-	public String getCategoria() {
-		return categoria;
-	}
-	public void setCategoria(String categoria) {
-		this.categoria = categoria;
-	}
-	
-	@Override
-	public String toString(){
-		return marca+" "+modelo + ", Stock:"+ stock;
-	}
-}
-\end{lstlisting}
-\clearpage
-
-\paragraph{Vehiculo}
-\begin{lstlisting}
-package Modelos;
-
-import java.util.Date;
-
-public class Vehiculo {
-	
-	private int id;
-	private String modelo;
-	private String color;
-	private Date anio;
-	private String matricula;
-
-	private Cliente dueno;
-	
-	
-	public Vehiculo(int id, String modelo, String color, Date anio, String matricula, Cliente dueno) {
-		this.id = id;
-		this.modelo = modelo;
-		this.color = color;
-		this.anio = anio;
-		this.matricula = matricula;
-		this.dueno = dueno;
-	}
-	public int getId() {
-		return id;
-	}
-	public void setId(int id) {
-		this.id = id;
-	}
-	public String getModelo() {
-		return modelo;
-	}
-	public void setModelo(String modelo) {
-		this.modelo = modelo;
-	}
-	public String getColor() {
-		return color;
-	}
-	public void setColor(String color) {
-		this.color = color;
-	}
-	public Date getAnio() {
-		return anio;
-	}
-	public void setAnio(Date anio) {
-		this.anio = anio;
-	}
-	public String getMatricula() {
-		return matricula;
-	}
-	public void setMatricula(String matricula) {
-		this.matricula = matricula;
-	}
-	public Cliente getDueno() {
-		return dueno;
-	}
-	public void setDueno(Cliente dueno) {
-		this.dueno = dueno;
-	}
-	
-	@Override
-	public String toString() {
-		return modelo+" : "+color + " : "+matricula +" : "+anio.toString();
-	}	
-}
-\end{lstlisting}
-\clearpage
-
-\paragraph{Reparacion}
-\begin{lstlisting}
-package Modelos;
-
-import java.util.Date;
-import java.util.HashMap;
-
-public class Reparacion {
-	
-	private int id;
-	private Date fecha_hora;
-	private float duracion;
-	private String comentarios;
-	private int id_factura;
-	private	HashMap<Pieza,Integer> piezas;
-	
-	public Reparacion() {};
-	
-	public Reparacion( Date fecha_hora, float duracion, String comentarios, int id_factura, HashMap<Pieza,Integer> piezas) {
-		super();
-		this.fecha_hora = fecha_hora;
-		this.duracion = duracion;
-		this.comentarios = comentarios;
-		this.id_factura = id_factura;
-		this.piezas=piezas;
-	}
-
-	public Reparacion(int id, Date fecha_hora, float duracion, String comentarios, int id_factura) {
-		super();
-		this.id = id;
-		this.fecha_hora = fecha_hora;
-		this.duracion = duracion;
-		this.comentarios = comentarios;
-		this.id_factura = id_factura;
-	}
-	
-	public Date getFecha_hora() {
-		return fecha_hora;
-	}
-
-
-	public void setFecha_hora(Date fecha_hora) {
-		this.fecha_hora = fecha_hora;
-	}
-
-
-	public int getId_factura() {
-		return id_factura;
-	}
-
-
-	public void setId_factura(int id_factura) {
-		this.id_factura = id_factura;
-	}
-
-
-	public int getId() {
-		return id;
-	}
-	public void setId(int id) {
-		this.id = id;
-	}
-	public Date getHora() {
-		return fecha_hora;
-	}
-	public void setHora(Date hora) {
-		this.fecha_hora = hora;
-	}
-	public float getDuracion() {
-		return duracion;
-	}
-	public void setDuracion(float duracion) {
-		this.duracion = duracion;
-	}
-	public String getComentarios() {
-		return comentarios;
-	}
-	public void setComentarios(String comentarios) {
-		this.comentarios = comentarios;
-	}
-
-	public HashMap<Pieza, Integer> getPiezas() {
-		return piezas;
-	}
-	public void setPiezas(HashMap<Pieza, Integer> piezas) {
-		this.piezas = piezas;
-	}	
-}
-\end{lstlisting}
-\clearpage
-
-\paragraph{Factura}
-\begin{lstlisting}
-package Modelos;
-
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.Map.Entry;
-
-public class Factura {
-	
-	private int id=0;
-	private Date fecha_entrada;
-	private double precio_total;
-	private Date fecha_fin = null;
-	private boolean pagado = false;
-	private int id_vehiculo;
-	private Vehiculo coche;
-	private ArrayList<Reparacion> reparaciones = new ArrayList<Reparacion>();
-	
-	public Factura(Vehiculo coche) {
-		this.id_vehiculo=coche.getId();
-		this.coche=coche;
-		fecha_entrada = new Date();
-	};
-	
-	public Factura(int id, Date fecha_entrada, double precio_total, Date fecha_fin, boolean pagado, int id_vehiculo) {
-		this.id = id;
-		this.fecha_entrada = fecha_entrada;
-		this.precio_total = precio_total;
-		this.fecha_fin = fecha_fin;
-		this.pagado = pagado;
-		this.id_vehiculo=id_vehiculo;
-	}
-	public Factura(int id, Date fecha_entrada, double precio_total, Date fecha_fin, boolean pagado, Vehiculo coche) {
-		this.id = id;
-		this.fecha_entrada = fecha_entrada;
-		this.precio_total = precio_total;
-		this.fecha_fin = fecha_fin;
-		this.pagado = pagado;
-		this.coche = coche;
-	}
-	
-	public ArrayList<Reparacion> getReparaciones() {
-		return reparaciones;
-	}
-
-	public void setReparaciones(ArrayList<Reparacion> reparaciones) {
-		this.reparaciones = reparaciones;
-	}
-
-	public int getId() {
-		return id;
-	}
-	public void setId(int id) {
-		this.id = id;
-	}
-	public Date getFecha_entrada() {
-		return fecha_entrada;
-	}
-	public void setFecha_entrada(Date fecha_entrada) {
-		this.fecha_entrada = fecha_entrada;
-	}
-	/*Se calcula en base a las horas de las reparaciones y las piezas utilizadas.
-	 Se podria poner que tuviese dependencia de la clase del vehiculo. 
-	 */
-	public double getPrecio_total() {
-		precio_total =0;
-		reparaciones.forEach(rep ->{
-			precio_total+=rep.getDuracion()*10;
-			try {
-				for (Entry<Pieza,Integer> linea : rep.getPiezas().entrySet()) {
-					precio_total+=linea.getValue()*linea.getKey().getPrecio();
-				}
-				
-			} catch (Exception e){
-				//En caso de operacion sin piezas
-			}
-		});
-		return precio_total;
-	}
-	
-	public Date getFecha_fin() {
-		return fecha_fin;
-	}
-	public void setFecha_fin(Date fecha_fin) {
-		this.fecha_fin = fecha_fin;
-	}
-	public boolean isPagado() {
-		return pagado;
-	}
-	public void setPagado(boolean pagado) {
-		this.pagado = pagado;
-	}
-	public Vehiculo getCoche() {
-		return coche;
-	}
-	public void setCoche(Vehiculo coche) {
-		this.coche = coche;
-	}
-	public int getId_vehiculo() {
-		return id_vehiculo;
-	}
-	public void setId_vehiculo(int id_vehiculo) {
-		this.id_vehiculo = id_vehiculo;
-	}
-}
-\end{lstlisting}
-\clearpage
+\input{codModulos}
 \subsection{Lenguaje de Marcas: conjunto de ficheros}
 \subsection{EDD: Diagramas}
 \subsection{SSII: Instalación y configuración y puesta en marcha.}
