--- a/DocTaller/codModulos.tex
+++ b/DocTaller/codModulos.tex
@@ -1,5 +1,31 @@
-\paragraph{Cliente}
-\begin{lstlisting}
+\definecolor{pblue}{rgb}{0.13,0.13,1}
+\definecolor{pgreen}{rgb}{0,0.5,0}
+\definecolor{pred}{rgb}{0.9,0,0}
+\definecolor{pgrey}{rgb}{0.46,0.45,0.48}
+
+
+\lstset{language=Java,
+backgroundcolor=\color{white},
+inputencoding=utf8,
+escapeinside={\%*}{*)},
+literate={á}{{\'a}}1 {é}{{\'e}}1 {í}{{\'i}}1 {ó}{{\'o}}1 {ú}{{\'u}}1 {Á}{{\'A}}1 {É}{{\'E}}1 {Í}{{\'I}}1 {Ó}{{\'O}}1 {Ú}{{\'U}}1 {ñ}{{\~n}}1 {Ñ}{{\~N}}1,
+basicstyle=\footnotesize,
+breakatwhitespace=false,
+breaklines=true,
+  showspaces=false,
+  showtabs=false,
+  breaklines=true,
+  showstringspaces=false,
+  breakatwhitespace=true,
+  commentstyle=\color{pgreen},
+  keywordstyle=\color{pblue},
+  stringstyle=\color{pred},
+  basicstyle=\ttfamily,
+  moredelim=[il][\textcolor{pgrey}]{$$},
+  moredelim=[is][\textcolor{pgrey}]{\%\%}{\%\%}
+}
+
+\begin{lstlisting}[caption=Cliente.java (App Escritorio)]
 package Modelos;
 
 public class Cliente {
@@ -74,10 +100,11 @@ public class Cliente {
 	
 }
 \end{lstlisting}
+
 \clearpage
 
-\paragraph{Pieza}
-\begin{lstlisting}
+
+\begin{lstlisting}[caption=Pieza.java (App Escritorio)]
 package Modelos;
 
 public class Pieza {
@@ -148,10 +175,10 @@ public class Pieza {
 	}
 }
 \end{lstlisting}
+
 \clearpage
 
-\paragraph{Vehiculo}
-\begin{lstlisting}
+\begin{lstlisting}[caption=Vehiculo.java (App Escritorio)]
 package Modelos;
 
 import java.util.Date;
@@ -218,10 +245,11 @@ public class Vehiculo {
 	}	
 }
 \end{lstlisting}
+
 \clearpage
 
-\paragraph{Reparacion}
-\begin{lstlisting}
+
+\begin{lstlisting}[caption=Reparacion.java (App Escritorio)]
 package Modelos;
 
 import java.util.Date;
@@ -309,10 +337,11 @@ public class Reparacion {
 	}	
 }
 \end{lstlisting}
+
 \clearpage
 
-\paragraph{Factura}
-\begin{lstlisting}
+
+\begin{lstlisting}[caption=Factura.java (App Escritorio)]
 package Modelos;
 
 import java.util.ArrayList;
