Nueva parte de LMSI

--- a/DocTaller/Documentacion.tex
+++ b/DocTaller/Documentacion.tex
@@ -5,6 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish,activeacute]{babel}
 \usepackage{titlesec}
+\usepackage[a4paper, margin=1in]{geometry}
 \titleformat{\section}
   {\normalfont\fontsize{14}{14}\bfseries}{\thesection}{1em}{}
 \titlespacing{\paragraph}{0pt}{1.5em}{.5em}[]
@@ -69,7 +70,8 @@
 \input{program/codSystem}
 \subsubsection{Paquete UI}
 \input{program/codUI}
-\subsection{Lenguaje de Marcas: conjunto de ficheros}
+\subsection{Lenguaje de Marcas: conjunto de ficheros}a
+\input{LMSI/codHTMLCSS}
 \subsection{EDD: Diagramas}
 \subsection{SSII: Instalación y configuración y puesta en marcha.}
 \subsection{FOL: Riesgos Laborales}
